force-app/main/default/objects/Rental_Preference__c/Rental_Preference__c.object-meta.xml
<CustomObject>
    <description>Represents rental preferences (default settings for rentals and bookings) for customers.</description>
    <label>Rental Preference</label>
    <nameField>
        <displayFormat>Rental-Preference-{0000000000}</displayFormat>
        <label>Rental Preference ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>