force-app/main/default/objects/Rental_Preference__c/fields/Business_Auto_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Business_Auto_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business - Auto Transmission</label>
    <type>Checkbox</type>
</CustomField>