force-app/main/default/objects/Rental_Preference__c/fields/Business_Booster_Seat_Count__c.field-meta.xml
<CustomField>
    <fullName>Business_Booster_Seat_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Business - Booster Seat Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>