force-app/main/default/objects/Rental_Preference__c/fields/Business_EV_Only__c.field-meta.xml
<CustomField>
    <fullName>Business_EV_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business - EV Only</label>
    <type>Checkbox</type>
</CustomField>