force-app/main/default/objects/Rental_Preference__c/fields/Business_Manual_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Business_Manual_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business - Manual Transmission</label>
    <type>Checkbox</type>
</CustomField>