force-app/main/default/objects/Rental_Preference__c/fields/Business_Preferences_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Preferences_Last_Updated_Date__c</fullName>
    <label>Business Preferences Last Updated Date</label>
    <type>Date</type>
</CustomField>