force-app/main/default/objects/Rental_Preference__c/fields/Business_Protection_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Business_Protection_Coverage__c</fullName>
    <label>Business - Protection Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protection_Coverage</valueSetName>
    </valueSet>
</CustomField>