force-app/main/default/objects/Rental_Preference__c/fields/Business_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Vehicle_Type__c</fullName>
    <label>Business - Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Type</valueSetName>
    </valueSet>
</CustomField>