force-app/main/default/objects/Rental_Preference__c/fields/Customer_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_ID__c</fullName>
    <formula>Customer__r.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer External ID</label>
    <type>Text</type>
</CustomField>