force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Airline_Membership_Number__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Airline_Membership_Number__c</fullName>
    <externalId>true</externalId>
    <label>Leisure - Airline Membership Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>