force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Auto_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Auto_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leisure - Auto Transmission</label>
    <type>Checkbox</type>
</CustomField>