force-app/main/default/objects/Rental_Preference__c/fields/Leisure_EV_Only__c.field-meta.xml
<CustomField>
    <fullName>Leisure_EV_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leisure - EV Only</label>
    <type>Checkbox</type>
</CustomField>