force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Manual_Transmission__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Manual_Transmission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leisure - Manual Transmission</label>
    <type>Checkbox</type>
</CustomField>