force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Motor_Club_Number__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Motor_Club_Number__c</fullName>
    <externalId>true</externalId>
    <label>Leisure - Motor Club Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>