force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Preferences_Last_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Preferences_Last_Updated_Date__c</fullName>
    <label>Leisure Preferences Last Updated Date</label>
    <type>Date</type>
</CustomField>