force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Protection_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Protection_Coverage__c</fullName>
    <label>Leisure - Protection Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Protection_Coverage</valueSetName>
    </valueSet>
</CustomField>