force-app/main/default/objects/Rental_Preference__c/fields/Leisure_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Leisure_Vehicle_Type__c</fullName>
    <label>Leisure - Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Type</valueSetName>
    </valueSet>
</CustomField>